--- a/Dotnet.AutoDependencyRegistration/Dotnet.AutoDependencyRegistration.csproj
+++ b/Dotnet.AutoDependencyRegistration/Dotnet.AutoDependencyRegistration.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <LangVersion>10</LangVersion>
         <Title>Dotnet Auto Dependency Registration</Title>
