--- a/Dotnet.AutoDependencyRegistration/Dotnet.AutoDependencyRegistration.csproj
+++ b/Dotnet.AutoDependencyRegistration/Dotnet.AutoDependencyRegistration.csproj
@@ -13,6 +13,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <RepositoryType>GitHub</RepositoryType>
+        <PackageVersion>1.0.0-alpha</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
