--- a/Dotnet.AutoDependencyRegistration/Dotnet.AutoDependencyRegistration.csproj
+++ b/Dotnet.AutoDependencyRegistration/Dotnet.AutoDependencyRegistration.csproj
@@ -14,6 +14,7 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <RepositoryType>GitHub</RepositoryType>
         <PackageVersion>1.0.0-alpha</PackageVersion>
+        <PackageId>Stax.AutoDependencyInjectionRegistration</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
