--- a/Dotnet.AutoDependencyRegistration/Dotnet.AutoDependencyRegistration.csproj
+++ b/Dotnet.AutoDependencyRegistration/Dotnet.AutoDependencyRegistration.csproj
@@ -13,8 +13,11 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <RepositoryType>GitHub</RepositoryType>
-        <PackageVersion>1.1.0-alpha</PackageVersion>
+        <PackageVersion>2.0.0</PackageVersion>
+        <PackageReleaseNotes>https://github.com/lukemansell/dotnet-auto-dependency-registration/blob/main/CHANGELOG.md</PackageReleaseNotes>
+        <PackageTags>dependency;injection;auto;registration;di</PackageTags>
         <PackageId>Stax.AutoDependencyInjectionRegistration</PackageId>
+        <RootNamespace>AutoDependencyRegistration</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
