--- a/Stax.AutoDependencyRegistration/Stax.AutoDependencyRegistration.csproj
+++ b/Stax.AutoDependencyRegistration/Stax.AutoDependencyRegistration.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net5.0;net6.0;net7.0;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>net5.0;net6.0;netcoreapp3.1</TargetFrameworks>
         <Nullable>enable</Nullable>
         <LangVersion>10</LangVersion>
         <Title>Dotnet Auto Dependency Registration</Title>
